--- a/theband.html
+++ b/theband.html
@@ -384,7 +384,7 @@
     </footer>
 
 
-    <!-- Modal -->
+   <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -399,13 +399,13 @@
                             <input type="text" class="form-control" id="InputName" placeholder="Enter your name" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" id="InputEmail1" placeholder="Enter your email">
+                            <input type="email" class="form-control" id="InputEmail1" placeholder="Enter your email" required>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="InputPassword1" placeholder="type a password">
+                            <input type="password" class="form-control" id="InputPassword1" placeholder="type a password" required>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="InputPassword2" placeholder="type your password again">
+                            <input type="password" class="form-control" id="InputPassword2" placeholder="type your password again" required>
                         </div>
                         <div class="wrapper-check">
                             <div class="checkbox newsletter">
@@ -419,18 +419,18 @@
                             </label>
                             </div>
                         </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-save">Subscribe</button>
+                        </div>
                     </form>
 
-
-
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-save">Subscribe</button>
-                </div>
+
             </div>
         </div>
     </div>
+
 
 
 
