listen.html improved, news.html added, modal-subscribe improved

--- a/news.html
+++ b/news.html
@@ -28,7 +28,8 @@
 
 <body>
 
-    <header class="conainer-fluid">
+
+    <header class="conainer-fluid header-content">
         <div class="wrapper-header">
 
             <div class="row">
@@ -62,7 +63,7 @@
                                 <li class="nav-item nav-item-menu active"><a href="news.html"><i class="fa fa-newspaper-o hidden-xs"></i><span class="page">News</span></a></li>
                                 <li class="nav-item nav-item-menu"><a href="listen.html"><i class="fa fa-music hidden-xs"></i><span class="page">Listen</span></a></li>
                                 <li class="nav-item nav-item-menu"><a href="contact.html"><i class="fa fa-comments hidden-xs"></i><span class="page">Contact</span></a></li>
-                                <li class="nav-item subscribe"><a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal">Subscribe</a></li>
+                                <li class="nav-item subscribe"><a href="#" class="btn btn-success2" type="submit" data-toggle="modal" data-target="#myModal">Subscribe</a></li>
                             </ul>
 
 
@@ -79,13 +80,260 @@
 
     </header>
 
-    <section class="container-fluid">
-        <div class="row bg-contact">
-            <div class="col-12-xs"></div>
+    <section class="container-fluid bg-section bg-section-contact">
+        <div class="wrapper-section">
+
+            <div class="row">
+                <div class="col-xs-12 col-md-4 bg-concerts">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2 class="page-subtitle text-center">Concerts coming up...</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <ul>
+                                <li class="concert-list">
+                                    <div class="row">
+                                        <div class="col-xs-7">
+                                            <h3 class="concert-place">Chevalier Theatre, Medford, MA, US</h3>
+                                            <h2 class="concert-day">Friday 01 March 2019</h2>
+
+                                        </div>
+                                        <div class="col-xs-5 concert-buy">
+                                            <h3><span class="label label-danger">Sold Out <i class="fa fa-frown-o"></i></span></h3>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-xs-12">
+
+                                            <div class="progress concert-progress">
+                                                <div class="progress-bar progress-bar-striped progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                                    <span class="sr-only">100% Complete</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+
+                                <li class="concert-list">
+                                    <div class="row">
+                                        <div class="col-xs-7">
+                                            <h3 class="concert-place">Ovation Hall at Ocean Resort Casino, Atlantic City, NJ, US</h3>
+                                            <h2 class="concert-day">Saturday 02 March 2019</h2>
+
+                                        </div>
+                                        <div class="col-xs-5 concert-buy">
+                                            <h3><span class="label label-warning">Hurry Up!!!</span></h3>
+                                            <a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal2">Book Now!</a>
+
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-xs-12">
+
+                                            <div class="progress concert-progress">
+                                                <div class="progress-bar progress-bar-striped progress-bar-warning uppercase active" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">95% sold
+                                                    <span class="sr-only">95% Complete</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="concert-list">
+                                    <div class="row">
+                                        <div class="col-xs-7">
+                                            <h3 class="concert-place">Hackensack Meridian Health Theatre at Count Basie Center, Red Bank, NJ, US</h3>
+                                            <h2 class="concert-day">Tuesday 05 March 2019</h2>
+                                        </div>
+                                        <div class="col-xs-5 concert-buy">
+                                            <h3><span class="label label-warning">Hurry Up!!!</span></h3>
+                                            <a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal2">Book Now!</a>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-xs-12">
+
+                                            <div class="progress concert-progress">
+                                                <div class="progress-bar progress-bar-striped progress-bar-warning uppercase active" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                                                    80% sold<span class="sr-only">80% Complete</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="concert-list">
+                                    <div class="row">
+                                        <div class="col-xs-7">
+                                            <h3 class="concert-place">Paramount Theatre, Huntington, NY, US</h3>
+                                            <h2 class="concert-day">Friday 08 March 2019</h2>
+                                        </div>
+                                        <div class="col-xs-5 concert-buy">
+                                            <h4><span class="label label-info hidden"></span></h4>
+                                            <a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal2">Book Now!</a>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-xs-12">
+
+                                            <div class="progress concert-progress">
+                                                <div class="progress-bar progress-bar-striped progress-bar-success uppercase active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">70% sold
+                                                    <span class="sr-only">70% Complete</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="concert-list">
+                                    <div class="row">
+                                        <div class="col-xs-7">
+                                            <h3 class="concert-place">Beacon Theatre, New York, NY, US</h3>
+                                            <h2 class="concert-day">Saturday 09 March 2019</h2>
+                                        </div>
+                                        <div class="col-xs-5 concert-buy">
+                                            <h4><span class="label label-info hidden"></span></h4>
+                                            <a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal2">Book Now!</a>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-xs-12">
+
+                                            <div class="progress concert-progress">
+                                                <div class="progress-bar progress-bar-striped progress-bar-success uppercase active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                                                    60% sold<span class="sr-only">60% Complete</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="concert-list">
+                                    <div class="row">
+                                        <div class="col-xs-7">
+                                            <h3 class="concert-place">Palace Theatre, Albany, NY, US</h3>
+                                            <h2 class="concert-day">Sunday 10 March 2019</h2>
+                                        </div>
+                                        <div class="col-xs-5 concert-buy">
+                                            <h4><span class="label label-info hidden"></span></h4>
+                                            <a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal2">Book Now!</a>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-xs-12">
+
+                                            <div class="progress concert-progress">
+                                                <div class="progress-bar progress-bar-striped progress-bar-success uppercase active" role="progressbar" aria-valuenow="32" aria-valuemin="0" aria-valuemax="100" style="width: 32%">
+                                                    32% sold<span class="sr-only">32% Complete</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="concert-list">
+                                    <div class="row">
+                                        <div class="col-xs-7">
+                                            <h3 class="concert-place">Mystic Lake Casino Hotel, Prior Lake, MN, US</h3>
+                                            <h2 class="concert-day">Thursday 14 March 2019</h2>
+                                        </div>
+                                        <div class="col-xs-5 concert-buy">
+                                            <h4><span class="label label-info">Tickets available soon</span></h4>
+                                            <button type="button" class="btn btn-success hidden">Book Now!</button>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-xs-12">
+
+                                            <div class="progress concert-progress">
+                                                <div class="progress-bar progress-bar-striped progress-bar-info uppercase" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 1%">
+                                                    <span class="sr-only">32% Complete</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+
+
+                            </ul>
+
+
+
+                        </div>
+                    </div>
+
+
+                </div>
+
+
+
+
+                <div class="col-xs-12 col-md-offset-1 col-md-7 videos-wrapper">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2 class="page-subtitle text-center">The lastest</h2>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-xs-12 video-block">
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <h3 class="text-center">The Monkees in the Mike & Micky Show - June 2018</h3>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <div class="news-video">
+                                        <div class="iframeframe">
+                                            <iframe width="560" height="315" src="https://www.youtube.com/embed/v0DsCLK1PTg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="row video2">
+                        <div class="col-xs-12 video-block">
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <h3 class="text-center">The Monkees in the Mike & Micky Show - June 2018</h3>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <div class="news-video">
+                                        <div class="iframeframe">
+                                            <iframe width="560" height="315" src="https://www.youtube.com/embed/HXgwca99iVw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </section>
 
-    <footer class="container-fluid">
+
+
+    <footer class="container-fluid footer">
 
         <div class="row bg-all-footer">
 
@@ -146,13 +394,13 @@
                             <input type="text" class="form-control" id="InputName" placeholder="Enter your name" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" id="InputEmail1" placeholder="Enter your email">
+                            <input type="email" class="form-control" id="InputEmail1" placeholder="Enter your email" required>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="InputPassword1" placeholder="type a password">
+                            <input type="password" class="form-control" id="InputPassword1" placeholder="type a password" required>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="InputPassword1" placeholder="type your password again">
+                            <input type="password" class="form-control" id="InputPassword2" placeholder="type your password again" required>
                         </div>
                         <div class="wrapper-check">
                             <div class="checkbox newsletter">
@@ -166,18 +414,54 @@
                             </label>
                             </div>
                         </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-save">Subscribe</button>
+                        </div>
                     </form>
 
-
-
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-save">Subscribe</button>
-                </div>
+
             </div>
         </div>
     </div>
+
+
+
+    <!--Modal book tickets-->
+    <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title text-center" id="myModalLabel2">Book tickets online</h4>
+                </div>
+                <div class="modal-body">
+
+                    <p>Please enter below yourcontact detail to book your tickets for the concert.</p>
+                    <p><span class="text-muted">You will receive an email with the details to complete the payment online.</span></p>
+
+                    <form>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="InputName_book" placeholder="Enter your name" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" id="InputEmail1_book" placeholder="Enter your email" required>
+                        </div>
+
+
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-save">Subscribe</button>
+                        </div>
+                    </form>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 
 
 
