--- a/theband.html
+++ b/theband.html
@@ -63,7 +63,7 @@
                                 <li class="nav-item nav-item-menu"><a href="news.html"><i class="fa fa-newspaper-o hidden-xs"></i><span class="page">News</span></a></li>
                                 <li class="nav-item nav-item-menu"><a href="listen.html"><i class="fa fa-music hidden-xs"></i><span class="page">Listen</span></a></li>
                                 <li class="nav-item nav-item-menu"><a href="contact.html"><i class="fa fa-comments hidden-xs"></i><span class="page">Contact</span></a></li>
-                                <li class="nav-item subscribe"><a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal">Subscribe</a></li>
+                                <li class="nav-item subscribe"><a href="#" class="btn btn-success2" type="submit" data-toggle="modal" data-target="#myModal">Subscribe</a></li>
                             </ul>
 
 
@@ -125,7 +125,7 @@
 
                         </p>
                         <p>
-                            We were specially active between 1966 and 1971 and some of our biggest achievements was "", "", "", and "".
+                            We were specially active between 1966 and 1971 and some of our biggest achievements was <span class="lead">"dfsdfsdf", "dsfsdfsdf", "sdfsdf", and "dsfsdfdsf"</span>.
 
                         </p>
                         <p>
