--- a/listen.html
+++ b/listen.html
@@ -69,7 +69,7 @@
                                 <li class="nav-item nav-item-menu"><a href="news.html"><i class="fa fa-newspaper-o hidden-xs"></i><span class="page">News</span></a></li>
                                 <li class="nav-item nav-item-menu active"><a href="listen.html"><i class="fa fa-music hidden-xs"></i><span class="page">Listen</span></a></li>
                                 <li class="nav-item nav-item-menu"><a href="contact.html"><i class="fa fa-comments hidden-xs"></i><span class="page">Contact</span></a></li>
-                                <li class="nav-item subscribe"><a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal">Subscribe</a></li>
+                                <li class="nav-item subscribe"><a href="#" class="btn btn-success2" type="submit" data-toggle="modal" data-target="#myModal">Subscribe</a></li>
                             </ul>
 
 
@@ -86,7 +86,7 @@
 
     </header>
 
-    <section class="container-fluid bg-section">
+    <section class="container-fluid bg-section bg-section-listen">
 
 
 
@@ -106,92 +106,51 @@
 
 
                     <div class="col-xs-12 wrapper-song">
-                        <div class="row wrapper-player">
-                            <div class="row">
-                                <div class="col-xs-12 album">
-                                    <div class="cover">
-                                        <div><img class="img-circle" src="images/cover3.jpg" alt="believer" /></div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="row wrapper-albums">
+
                             <div class="row">
                                 <div class="col-xs-12">
-                                    <div class="title-song">
-                                        <h3>title song</h3>
+                                    <div class="title-album">
+                                        <h3>Christmas Party album (2018)</h3>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class=" col-xs-12 audio-mp3">
-                                    <audio controls>
-                                      <source src="mp3/ImABeliever.mp3" type="audio/mp3">
-                                      Your browser does not support the audio element.
-                                    </audio>
+                                <div class=" col-xs-12 new-album">
+                                    <div class="iframeframe">
+                                        <iframe src="https://open.spotify.com/embed/album/3WzJHiv489Wb9So4K7csLy" width="100%" height="200" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                    </div>
                                 </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-xs-12  buy-download-share lyrics">
-                                    <p>Download the lyrics!
-                                        <a href="#"><i class="song-links fa fa-download"></i></a>
-                                    </p>
-                                </div>
-
-                            </div>
-
-                            <div class="row">
-                                <div class="col-xs-12  buy-download-share share-buy">
-
-                                    <a href="#"><i class="song-links fa fa-share-alt"></i></a>
-                                    <a href="#"><i class="song-links fa fa-shopping-cart"></i></a>
-                                </div>
-
                             </div>
                         </div>
                     </div>
 
                     <div class="col-xs-12 wrapper-song">
-                        <div class="row wrapper-player">
-                            <div class="row">
-                                <div class="col-xs-12 album">
-                                    <div class="cover">
-                                        <div><img class="img-circle" src="images/cover2.png" alt="believer" /></div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="row wrapper-albums">
+
                             <div class="row">
                                 <div class="col-xs-12">
-                                    <div class="title-song">
-                                        <h3>title song</h3>
+                                    <div class="title-album">
+                                        <h3>Good Times (2018)</h3>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class=" col-xs-12 audio-mp3">
-                                    <audio controls>
-                                      <source src="mp3/ImABeliever.mp3" type="audio/mp3">
-                                      Your browser does not support the audio element.
-                                    </audio>
+                                <div class=" col-xs-12 new-album">
+                                    <div class="iframeframe">
+                                        <iframe src="https://open.spotify.com/embed/album/618fk3ITH2nXQtT0nTTZ84" width="100%" height="200" frameborder="0" allow="encrypted-media"></iframe>
+                                    </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
 
-                            <div class="row">
-                                <div class="col-xs-12  buy-download-share lyrics">
-                                    <p>Download the lyrics!
-                                        <a href="#"><i class="song-links fa fa-download"></i></a>
-                                    </p>
-                                </div>
 
-                            </div>
 
-                            <div class="row">
-                                <div class="col-xs-12  buy-download-share share-buy">
+                    <div class="col-xs-12 wrapper-song">
+                        <div class="row wrapper-albums follow-spotify">
+                            <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:320EPCSEezHt1rtbfwH6Ck&size=detail&theme=light" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
 
-                                    <a href="#"><i class="song-links fa fa-share-alt"></i></a>
-                                    <a href="#"><i class="song-links fa fa-shopping-cart"></i></a>
-                                </div>
-
-                            </div>
                         </div>
                     </div>
 
@@ -208,7 +167,7 @@
             <div class="col-xs-12 col-sm-6 classics music-column">
                 <div class="row">
                     <div class="col-xs-12">
-                        <h2 class="page-subtitle text-center">The classics</h2>
+                        <h2 class="page-subtitle text-center">Top classics</h2>
                     </div>
                 </div>
 
@@ -225,12 +184,13 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="title-song">
-                                        <h3>Daydream Believer</h3>
+                                        <h3>Daydream Believer (1968)</h3>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class=" col-xs-12 audio-mp3">
+
                                     <audio controls>
                                       <source src="mp3/DaydreamBeliever.mp3" type="audio/mp3">
                                       Your browser does not support the audio element.
@@ -272,7 +232,7 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="title-song">
-                                        <h3>I'm a Believer</h3>
+                                        <h3>I'm a Believer (1966)</h3>
                                     </div>
                                 </div>
                             </div>
@@ -318,7 +278,7 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="title-song">
-                                        <h3>Steppin' Stone</h3>
+                                        <h3>Steppin' Stone (1967)</h3>
                                     </div>
                                 </div>
                             </div>
@@ -364,7 +324,7 @@
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="title-song">
-                                        <h3>Last Train to Clarksville</h3>
+                                        <h3>Last Train to Clarksville (1966)</h3>
                                     </div>
                                 </div>
                             </div>
